--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
+@import '~bulma/css/bulma.css';
 /* You can add global styles to this file, and also import other style files */
+
+.cursor{
+  cursor: pointer;
+}
+
+.line-height_4{
+  line-height: 4rem;
+}
