table form mock design

--- a/src/app/feature-modules/customer/customer-form/customer-form.component.html
+++ b/src/app/feature-modules/customer/customer-form/customer-form.component.html
@@ -8,46 +8,116 @@
   <div class="columns ml-4 mt-4">
 
     <div class="column is-two-thirds">
-      <div class="columns is-gapless">
-        <div class="column is-one-third">
-          <label class="label">Title</label>
-          <div class="control">
-            <div class="select is-fullwidth">
-              <select>
-                <option>Mr</option>
-                <option>Mrs</option>
-                <option>Miss</option>
-                <option>Ms</option>
-              </select>
-            </div>
-          </div>
-        </div>
-        <div class="column">
-          <label class="label">First name</label>
-          <div class="control">
-            <input class="input" type="text" placeholder="First name">
-          </div>
-        </div>
-      </div>
 
       <div class="field">
-        <label class="label">Surname at birth (Optional)</label>
+        <label class="label">Main purpose for applying at MCB </label>
         <div class="control">
-          <input class="input" type="text" placeholder="Text input" value="surname at birth">
+          <div class="select is-fullwidth">
+            <select>
+              <option>Account to operate locally</option>
+              <option>Account to operate overseas</option>
+              <option>Energy & commodities financing</option>
+              <option>Investment portfolio</option>
+            </select>
+          </div>
         </div>
       </div>
 
       <div class="field">
-        <label class="label">Date of birth</label>
+        <label class="label">Name of the company</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Text input" value="">
+        </div>
+      </div>
+
+
+      <div class="field">
+        <label class="label">Type of entity</label>
+        <div class="control">
+          <div class="select is-fullwidth">
+            <select>
+              <option>Association</option>
+              <option>Private Company</option>
+              <option>Trust</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">Business activity</label>
+        <div class="control">
+          <div class="select is-fullwidth">
+            <select>
+              <option>Banking</option>
+              <option>Fishing</option>
+              <option>Manufacturing</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">System to prompt license requirements if business activity is Banking</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Text input" value="---">
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">Country of incorporation</label>
+        <div class="control">
+          <div class="select is-fullwidth">
+            <select>
+              <option>Association</option>
+              <option>Private Company</option>
+              <option>Trust</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">Registration Number</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Text input" value="">
+        </div>
+      </div>
+
+
+
+      <div class="field">
+        <label class="label">Date of incorporation</label>
         <div class="control">
           <input class="input is-fullwidth" type="date" placeholder="Text input" value="bulma">
         </div>
       </div>
 
       <div class="field">
-        <label class="label">NIC number</label>
+        <label class="label">Name of Director / Shareholders</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Text input" value="">
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">Passport Number</label>
         <div class="control">
           <input class="input" type="text" placeholder="Text input" value="---">
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">Name of designated of applicant</label>
+        <div class="control">
+          <input class="input" type="text" placeholder="Text input" value="---">
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">Email address for communication</label>
+        <div class="control">
+          <input class="input " type="email" placeholder="Text input" value="">
         </div>
       </div>
     </div>
@@ -62,16 +132,12 @@
       <div class="block is-bordered line-height_4">
         <div class="column ">
           <p class="title is-2 mb-4 my-2 has-text-centered">
-            <span class="fas fa-upload mr-4" ></span>
+            <span class="fas fa-upload mr-4"></span>
             <span class="fas fa-camera ml-4"></span>
           </p>
           <p class="title is-5 my-4 has-text-centered">Upload your file</p>
           <p class="subtitle is-6  has-text-centered">you can take a picture or upload your document</p>
-          <p class="subtitle is-5 has-text-centered">
-            <span class="my-2 mr-2">---</span>
-            <span class="my-2">OR</span>
-            <span class="my-2 ml-2">---</span>
-          </p>
+
           <div class="mt-4 mb-4 has-text-centered">
             <button class="button is-primary has-text-white">Upload</button>
           </div>
