--- a/src/app/feature-modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/feature-modules/dashboard/dashboard/dashboard.component.html
@@ -17,7 +17,12 @@
       <td>Corporation</td>
       <td>Software Development</td>
       <td>USA</td>
-      <td>123456789</td>
+      <td>
+        <p>123456789
+          <span class=" p-1 is-small has-radius-rounded has-background-danger-70 has-text-white is-float-right">Pending</span>
+        </p>
+
+      </td>
     </tr>
     <tr>
       <td>Another Company Inc</td>
