--- a/src/app/feature-modules/dashboard/onboarding-detail/onboarding-detail.component.html
+++ b/src/app/feature-modules/dashboard/onboarding-detail/onboarding-detail.component.html
@@ -2,79 +2,157 @@
   <div class=" ml-4 mt-6">
     <h1 class="title is-2 mt-6">Detail</h1>
     <p class="subtitle is-5 mt-6">Application For 1FR120
-      <span class="is-6 p-2 has-radius-rounded has-background-danger-75 has-text-white is-float-right">Pending</span>
+      <span class="is-6 p-2 has-radius-rounded has-background-danger-70 has-text-white is-float-right">Pending</span>
     </p>
 
     <hr/>
   </div>
   <div class="columns ml-4 mt-4">
 
-    <div class="column is-two-thirds">
-      <div class="columns is-gapless">
-        <div class="column is-one-third">
-          <label class="label">Title</label>
+    <div class="columns ml-4 mt-4">
+
+      <div class="column is-two-thirds">
+
+        <div class="field">
+          <label class="label">Main purpose for applying at MCB </label>
           <div class="control">
             <div class="select is-fullwidth">
               <select>
-                <option>Mr</option>
-                <option>Mrs</option>
-                <option>Miss</option>
-                <option>Ms</option>
+                <option>Account to operate locally</option>
+                <option>Account to operate overseas</option>
+                <option>Energy & commodities financing</option>
+                <option>Investment portfolio</option>
               </select>
             </div>
           </div>
         </div>
-        <div class="column">
-          <label class="label">First name</label>
+
+        <div class="field">
+          <label class="label">Name of the company</label>
           <div class="control">
-            <input class="input" type="text" placeholder="First name">
+            <input class="input" type="text" placeholder="Text input" value="">
           </div>
         </div>
-      </div>
 
-      <div class="field">
-        <label class="label">Surname at birth (Optional)</label>
-        <div class="control">
-          <input class="input" type="text" placeholder="Text input" value="surname at birth">
-        </div>
-      </div>
 
-      <div class="field">
-        <label class="label">Date of birth</label>
-        <div class="control">
-          <input class="input is-fullwidth" type="date" placeholder="Text input" value="bulma">
-        </div>
-      </div>
-
-      <div class="field">
-        <label class="label">NIC number</label>
-        <div class="control">
-          <input class="input" type="text" placeholder="Text input" value="---">
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="columns is-two-thirds ml-4 mt-4">
-    <div class="column is-two-thirds">
-
-      <p class="title is-4">File Contents:</p>
-
-      <div class="block is-bordered line-height_4">
-        <div class="column ">
-          <p class="title is-2 mb-4 my-2 has-text-centered"></p>
-
-          <div class="block mt-2">
-            <div class="columns mt-4 is-column-gap-2">
-              <button class="button is-half column is-dark">Reject</button>
-              <button class="button is-half column is-light ">Accept</button>
+        <div class="field">
+          <label class="label">Type of entity</label>
+          <div class="control">
+            <div class="select is-fullwidth">
+              <select>
+                <option>Association</option>
+                <option>Private Company</option>
+                <option>Trust</option>
+              </select>
             </div>
           </div>
         </div>
+
+        <div class="field">
+          <label class="label">Business activity</label>
+          <div class="control">
+            <div class="select is-fullwidth">
+              <select>
+                <option>Banking</option>
+                <option>Fishing</option>
+                <option>Manufacturing</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">System to prompt license requirements if business activity is Banking</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Text input" value="---">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Country of incorporation</label>
+          <div class="control">
+            <div class="select is-fullwidth">
+              <select>
+                <option>Association</option>
+                <option>Private Company</option>
+                <option>Trust</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Registration Number</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Text input" value="">
+          </div>
+        </div>
+
+
+
+        <div class="field">
+          <label class="label">Date of incorporation</label>
+          <div class="control">
+            <input class="input is-fullwidth" type="date" placeholder="Text input" value="bulma">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Name of Director / Shareholders</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Text input" value="">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Passport Number</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Text input" value="---">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Name of designated of applicant</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Text input" value="---">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Email address for communication</label>
+          <div class="control">
+            <input class="input " type="email" placeholder="Text input" value="">
+          </div>
+        </div>
       </div>
 
-
     </div>
+
+    <div class="column">
+      <div class="columns is-two-thirds ml-4 mt-4">
+        <div class="column is-two-thirds">
+
+          <p class="title is-4">File Contents:</p>
+
+          <div class="block is-bordered line-height_4">
+            <div class="column ">
+              <p class="title is-2 mb-4 my-2 has-text-centered"></p>
+
+              <div class="block mt-2">
+                <div class="columns mt-4 is-column-gap-2">
+                  <button class="button is-half column is-dark">Reject</button>
+                  <button class="button is-half column is-light ">Accept</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
   </div>
+
+
 </div>
