add file upload template

--- a/src/app/feature-modules/customer/customer-form/customer-form.component.html
+++ b/src/app/feature-modules/customer/customer-form/customer-form.component.html
@@ -85,7 +85,6 @@
       </div>
 
 
-
       <div class="field">
         <label class="label">Date of incorporation</label>
         <div class="control">
@@ -139,7 +138,19 @@
           <p class="subtitle is-6  has-text-centered">you can take a picture or upload your document</p>
 
           <div class="mt-4 mb-4 has-text-centered">
-            <button class="button is-primary has-text-white">Upload</button>
+
+            <div class="file has-text-centered">
+              <label class="file-label">
+                <input class="file-input" type="file" name="resume"/>
+                  <span class="file-cta">
+                    <span class="file-icon">
+                      <i class="fas fa-upload"></i>
+                    </span>
+                    <span class="file-label has-text-centered"> Choose a file… </span>
+                  </span>
+              </label>
+            </div>
+
           </div>
 
           <p>Max size is 5 MB ,Allowed files are .jpg,.png,.jpeg,.img,.pdf</p>
@@ -147,7 +158,7 @@
           <div class="block mt-2">
             <div class="columns mt-4 is-column-gap-2">
               <button class="button is-half column is-half">Cancel</button>
-              <button class="button is-half column is-dark ">Next</button>
+              <button class="button is-half column is-dark ">Register</button>
             </div>
           </div>
         </div>
