--- a/src/app/feature-modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/feature-modules/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="container mt-4">
-
+  <p class="title is-5 mb-4 mt-4">Welcome Back , Fekes</p>
+  <hr/>
   <p class="title is-4">Company Information</p>
   <table class="table is-striped is-small is-fullwidth mt-6">
     <thead>
