--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,19 @@
 @import '~bulma/css/bulma.css';
 /* You can add global styles to this file, and also import other style files */
 
-.cursor{
+body {
+  width: 100%;
+  height: 100vh !important;
+}
+
+.content__container{
+  height:100vh;
+}
+
+.cursor {
   cursor: pointer;
 }
 
-.line-height_4{
+.line-height_4 {
   line-height: 4rem;
 }
