--- a/src/app/feature-modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/feature-modules/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <p class="title is-5 mb-4 mt-4">Welcome Back , Fekes</p>
+  <p class="title is-5 mb-4 mt-4">Welcome Back , {{appAuthService.role()}}</p>
   <hr/>
   <p class="title is-4">Company Information</p>
   <table class="table is-striped is-small is-fullwidth mt-6">
@@ -13,24 +13,19 @@
     </tr>
     </thead>
     <tbody>
-    <tr class="cursor" [routerLink]="['/dashboard/detail', id]">
-      <td>Example Company Ltd</td>
-      <td>Corporation</td>
-      <td>Software Development</td>
-      <td>USA</td>
+    <tr class="cursor" *ngFor="let application of applications()|async" [routerLink]="['/dashboard/detail', application.id]">
+      <td>{{application.companyName}}</td>
+      <td>{{application.entityType}}</td>
+      <td>{{application.businessActivity}}</td>
+      <td>{{application.countryOfIncorporation}}</td>
       <td>
-        <p>123456789
-          <span class=" p-1 is-small has-radius-rounded has-background-danger-70 has-text-white is-float-right">Pending</span>
+        <p>{{application.registrationNumber}}
+          <span class=" p-1 is-small has-radius-rounded has-background-danger-70 has-text-white is-float-right">
+            {{application.status}}
+          </span>
         </p>
 
       </td>
-    </tr>
-    <tr>
-      <td>Another Company Inc</td>
-      <td>LLC</td>
-      <td>Marketing Services</td>
-      <td>UK</td>
-      <td>987654321</td>
     </tr>
     </tbody>
   </table>
